--- a/Src/index.html
+++ b/Src/index.html
@@ -90,14 +90,10 @@
 
                 <!-- Botones de navegacion -->
                 <div class="d-flex align-content-stretch flex-wrap" id="btnNavegation">
-                    <button class="btnNavegation" type="button" a href="..." id="btnCheckCourse"><strong>Vizualizar
-                            fichas</strong></button>
-                    <button class="btnNavegation" type="button" a href="..." id="btnCheckNotifications"><strong>Ver
-                            notificaciones</strong></button>
-                    <button class="btnNavegation" type="button" a href="..." id="btnFollowUpPlan"><strong>Plan
-                            seguimiento</strong></button>
-                    <button class="btnNavegation" type="button" a href="..." id="btnCheckUserManual"><strong>¿Necesitas
-                            ayuda?</strong></button>
+                    <button id="btnMakeAssistance" class="btn btn-primary mb-2">Registrar asistencia</button>
+                    <button id="btnCheckHistory" class="btn btn-primary mb-2">Historial de asistencia</button>
+                    <button id="btnMakeReport" class="btn btn-primary mb-2">Generar reporte</button>
+                    <button id="btnCheckUserManual" class="btn btn-primary">¿Necesitas ayuda?</button>
                 </div>
 
                 <!-- Pie de pagina -->
@@ -151,14 +147,14 @@
             <!-- Encabezado -->
             <div class="titulo">
                 <h1 id="heading" class="card-title p-2" style="color: #00304D; height: auto;">
-                    <strong>Bienvenido de nuevo,<span style="color: #39A900;"> ¿Qué deseas realizar el dia de
-                            hoy?</span></strong>
+                    <strong>Bienvenido de nuevo, ¿<span style="color: #39A900;">Qué deseas realizar el dia de
+                            hoy</span>?</strong>
                 </h1>
                 <div id="subHeading" style="width: 90%; margin: 0 auto;">
                     <div style="width: 90%; margin: 0 auto;">
                         <div class="d-flex flex-column align-items-center" style="width: 100%;">
                             <div class="d-flex justify-content-center align-items-center"
-                                style="color:#00304D; font-size: 19.5px; margin-left: 2px;">
+                                style="color:#00304D; font-size: 14.5px;">
                                 <strong>Selecciona una opción en el menú lateral:</strong>
                                 <button class="btn btn-primary" type="button" id="btnReport"
                                     style="width: 20vh; margin-left: 30vh; font-size: 18px;">
@@ -187,7 +183,7 @@
             <!-- Contenido modificable -->
             <div class="container d-flex flex-column mb-3" id="dynamicContentContainer">
 
-                <div class="d-flex align-items-center mb-2" id="contentCard" style="width: 100%; max-width: 1100px;">
+                <div class="d-flex align-items-center mb-2" id="contentCardCourse" style="width: 100%; max-width: 1100px;">
                     <img src="../Resources/Img/FolderIcon.png" alt="Imagen 1" class="imagen-sub-div" id="iconImg">
                     <strong style="color: #00304D; font-size: 30px; margin-left: 2vh;">Ficha 2823217</strong>
                     <div class="flex-grow-1">
@@ -197,6 +193,7 @@
                         <strong>Ver opciones</strong>
                     </button>
                 </div>
+                
                 <template id="dinamicCardCourse"><!-- Tarjeta dinámica de selección de ficha -->
                 </template>
 
@@ -223,15 +220,14 @@
                 </template>
 
                 <template id="dinamicStudent"><!-- Tarjeta dinámica de nombre de aprendiz -->
-                    <div class="d-flex align-items-center mb-2" id="contentCard"
-                        style="width: 100%; max-width: 1100px;">
+                    <div class="d-flex align-items-center mb-2" id="contentCard" style="width: 100%; max-width: 1100px;">
                         <img src="../Resources/Img/UserIcon.png" alt="Imagen 1" class="imagen-sub-div" id="iconImg">
                         <strong style="color: #00304D; font-size: 30px; margin-left: 2vh;">Jean Carlos
                             Centeno</strong>
                         <div class="flex-grow-1">
                         </div>
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                            data-bs-target="#asistModal" id="moreOptionBtn">
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#asistModal"
+                            id="moreOptionBtn">
                             <strong>Ver historial</strong>
                         </button>
                     </div>
@@ -271,14 +267,18 @@
                     </div>
                     <div class="modal-body">
                         <div class="d-flex" id="btnNavegation">
-                            <button class="btn btn-primary mb-2" type="button" a href="..." id="btnMakeAssistance"><strong>Registrar
+                            <button class="btn btn-primary mb-2" type="button" a href="..."
+                                id="btnMakeAssistance"><strong>Registrar
                                     asistencia</strong></button>
-                            <button class="btn btn-primary mb-2" type="button" a href="..." id="btnCheckHistory"><strong>Historial
+                            <button class="btn btn-primary mb-2" type="button" a href="..."
+                                id="btnCheckHistory"><strong>Historial
                                     de
                                     asistencia</strong></button>
-                            <button class="btn btn-primary mb-2" type="button" a href="..." id="btnMakeReport"><strong>Generar
+                            <button class="btn btn-primary mb-2" type="button" a href="..."
+                                id="btnMakeReport"><strong>Generar
                                     reporte</strong></button>
-                            <button class="btn btn-primary" type="button" a href="..." id="btnCheckUserManual"><strong>¿Necesitas
+                            <button class="btn btn-primary" type="button" a href="..."
+                                id="btnCheckUserManual"><strong>¿Necesitas
                                     ayuda?</strong></button>
                         </div>
                     </div>
