Se aprendiom a crear mas objetos, en este caso queda pendiente arreglar la pantalla de registrar asistencia, y terminar la diferencia de la card de asistencia ya que la de historial esta terminada.

--- a/Src/index.html
+++ b/Src/index.html
@@ -133,6 +133,11 @@
                 <div id="btnNavegationMenu">
                     <button class="btnNavegation" type="button" a href="..." id="btnMakeAssistance"><strong>Registrar
                             asistencia</strong></button>
+                    <button class="btnNavegation" type="button" a href="..." id="btnCheckHistory"><strong>Historial
+                            de
+                            asistencia</strong></button>
+                    <button class="btnNavegation" type="button" a href="..." id="btnMakeReport"><strong>Generar
+                            reporte</strong></button>
                     <button class="btnNavegation" type="button" a href="..." id="btnCheckCourse"><strong>Vizualizar
                             fichas</strong></button>
                     <button class="btnNavegation" type="button" a href="..." id="btnCheckNotifications"><strong>Ver
@@ -213,8 +218,7 @@
                                 id="btnCheckHistory"><strong>Historial
                                     de
                                     asistencia</strong></button>
-                            <button class="btnNavegation" type="button" a href="..."
-                                id="btnMakeReport"><strong>Generar
+                            <button class="btnNavegation" type="button" a href="..." id="btnMakeReport"><strong>Generar
                                     reporte</strong></button>
                             <button class="btnNavegation" type="button" a href="..."
                                 id="btnCheckUserManual"><strong>¿Necesitas
@@ -306,7 +310,6 @@
                 </div>
             </div>
         </div>
-
 
         <!-- Modal de marcar asistencia -->
         <div class="modal fade" id="asistModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -483,7 +486,8 @@
         </div>
 
         <!-- Modal de historial de asistencia  -->
-        <div class="modal fade" id="asistModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="historyAsistModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content align-items-center">
                     <div class="modal-header">
